--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
   <body>
     <h1 style="text-align: center">Arrange Images by drag and drop</h1>
     <div class="flex" id="parent" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)">
-      <div id="div1"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 1</div>
-      <div id="div2"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 2</div>
-      <div id="div3"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 3</div>
-      <div id="div4"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 4</div>
-      <div id="div5"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 5</div>
-      <div id="div6"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 6</div>
+      <div id="drag1"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 1</div>
+      <div id="drag2"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 2</div>
+      <div id="drag3"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 3</div>
+      <div id="drag4"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 4</div>
+      <div id="drag5"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 5</div>
+      <div id="drag6"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 6</div>
     </div>
   </body>
 </html>
