--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <h1 style="text-align: center">Arrange Images by drag and drop</h1>
-    <div class="flex" id="parent" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)">
-      <div id="drag1"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 1</div>
-      <div id="drag2"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 2</div>
-      <div id="drag3"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 3</div>
-      <div id="drag4"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 4</div>
-      <div id="drag5"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 5</div>
-      <div id="drag6"  draggable="true" class="image" ondragstart="dragstartHandler(event)" >Image 6</div>
+    <div class="flex" id="parent">
+      <div draggable="true" class="image" ><img id="drag1" > Image 1</div>
+      <div draggable="true" class="image" ><img id="drag2" > Image 2</div>
+      <div draggable="true" class="image" ><img id="drag3" > Image 3</div>
+      <div draggable="true" class="image" ><img id="drag4" > Image 4</div>
+      <div draggable="true" class="image" ><img id="drag5" > Image 5</div>
+      <div draggable="true" class="image" ><img id="drag6" > Image 6</div>
     </div>
   </body>
 </html>
